<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MerchSys</string>
    <string name="version">Version 1.0.1</string>
    <string name="copyright">Live Shows Group SA de CV © 2012</string>
    <string name="developed">Developed by</string>
    <string name="action_settings">Preferences</string>
    <string name="action_new">Add Product</string>
    <string name="action_print">Print</string>
    <string name="action_artist">Add Artist</string>
    <string name="action_venue">Modify Venue</string>
    <string name="action_event">Change Event Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Live Shows Merchandising</string>
    <string name="action_accept">Accept</string>
    <string name="accept">Yes</string>
    <string name="cancel">No</string>

    <!-- Evento -->
    <string name="evento_nombre">Event:</string>
    <string name="evento_artista">Artist: </string>
    <string name="evento_local">Venue: </string>
    <string name="hint_local">Select a venue</string>
    <string name="evento_capacidad">Capacity:</string>
    <string name="evento_fecha">Date:</string>
    <string name="continuar">Continue</string>
    <string name="otro">Other</string>
    <string name="hint_date">dd/mm/yy</string>
    <string name="hint_evento">Event name</string>
    <string name="evento_tipo_moneda">Currency:</string>
    <string name="hint_artista">Artist Name</string>

    <!-- Imagenes -->
    <string name="cnt">Content</string>

    <!-- DialogoProductos -->
    <string name="btn_cancelar">Cancel</string>
    <string name="btn_aceptar">Accept</string>
    <string name="name_product">Product</string>
    <string name="cantidad">Amount</string>
    <string name="talla">Size</string>
    <string name="impuestos">TAXES</string>
    <string name="im_nombre">Name:</string>
    <string name="im_por">%</string>
    <string name="artista_dialogo_prod">ARTIST</string>
    <string name="ck_talla">By Size</string>
    <string name="comision">COMMISSIONS</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="preciod">Price</string>
    <string name="por">%</string>
    <string name="din">$</string>
    <string name="hint_comision">Choose commission</string>
    <string name="hint_tipo">Product Type</string>

    <!-- ActivityProductos -->
    <string name="articulos">Merchandise</string>
    <string name="precio">Price</string>
    <string name="adicionales">Addings</string>
    <string name="total">Total</string>
    <string name="t_adicionales">No more addings allowed</string>
    <string name="error">Error</string>
    <string name="stand">Stands</string>
    <string name="cantidad_disponible">Amount Available</string>
    <string name="album_name">MerchSys</string>
    <string name="alert_delete">Are you sure you want to delete </string>
    <string name="alert_delete_adding">Are you sure you want to delete this product\'s last adding?</string>

    <!-- Errores -->
    <string name="sin_artista">Write the name of the event</string>
    <string name="sin_evento">Datos incompletos, falta nombre del evento</string>
    <string name="sin_lugar">Incomplete information, missing venue</string>
    <string name="sin_capacidad">Incomplete information, missing capacity</string>
    <string name="sin_fecha">Incomplete information, missing date</string>
    <string name="title_activity_activity_productos">Merchandise</string>
    <string name="sin_impuestos">Missing product\'s tax</string>
    <string name="sin_comisiones">Missing product\'s commissions</string>
    <string name="sin_nombre_producto">Missing product\'s name</string>
    <string name="sin_precio">Missing price</string>
    <string name="sin_cantidad">Missing amount</string>
    <string name="sin_tipo">Missing product type</string>
    <string name="sin_cantidad_valida">Amount not valid</string>
    <string name="sin_precio_valido">Price not valid</string>
    <string name="err_cort_noval">Complimentary amount not valid</string>
    <string name="err_com_noval">Commission not valid</string>
    <string name="err_cantidad">The amount of products is incorrect</string>
    <string name="sin_stand">Missing stand name</string>
    <string name="sin_encargado">Missing stand manager\'s name</string>
    <string name="sin_stand_comision">Missing manager\'s commission</string>
    <string name="e_artista">That artist already exists</string>
    <string name="e_fecha">That date already exists</string>

    <!-- Menu Contextual -->
    <string name="m_eliminar">Delete</string>
    <string name="m_actualizar">Update</string>
    <string name="m_detalles">Details</string>
    <string name="title_activity_stand">StandActivity</string>
    <string name="title_menu">Choose an option</string>
    <string name="m_comision">Change commission</string>
    <string name="m_cortesia">Add Complimentary</string>
    <string name="m_delete_cortesia">Delete Complimentary</string>
    <string name="m_regresar">Return to Warehouse</string>
    <string name="m_delete_adding">Delete Last Adding</string>

    <!-- Stands -->
    <string name="vacio">There are no Stands</string>
    <string name="cierre">Close Stand</string>
    <string name="cierre_dia">Close Day</string>
    <string name="encargado">Manager</string>
    <string name="s_producto">Product</string>
    <string name="s_cantidad">Amount</string>
    <string name="s_cantidad_stand">Cantidad Stand</string>
    <string name="s_comision">Commission</string>
    <string name="r_neto">After taxes</string>
    <string name="r_bruto">Before taxes</string>
    <string name="a_prod">Add Products</string>
    <string name="title_activity_activity_agregar_productos">Adding Products to a Stand</string>
    <string name="title_activity_activity_cierre_stand">Closing Stand</string>
    <string name="title_activity_activity_cierre_dia">Close Day</string>
    <string name="no_stand">Please select a stand</string>
    <string name="no_products">This stand has no products</string>

    <!-- Cierre Stand -->
    <string name="efectivo">Efectivo:</string>
    <string name="banamex">TC Banamex:</string>
    <string name="banorte">TC Banorte:</string>
    <string name="santander">TC Santander:</string>
    <string name="amex">TC AmEx:</string>
    <string name="pago_otro">Other:</string>
    <string name="prod_no">Merchandise not sold</string>
    <string name="cortesias">Complimentaries</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_comision">Commission</string>
    <string name="lbl_falta">Deposit</string>
    <string name="alert_cierre">Do you want to print this stand\'s sales report?</string>

    <!-- Cierre dia -->
    <string name="viaticos">Gastos Operativos</string>
    <string name="lbl_sueldos">Sueldos/Bonos/Comisiones</string>
    <string name="nota">Nota</string>
    <string name="factura">Factura</string>
    <string name="reportes">Reports</string>
    <string name="hint_concepto">Concept</string>
    <string name="hint_cantidad">Amount</string>
    <string name="hint_agencia">Select an agency</string>
    <string name="hint_agencia_venue">Agency</string>
    <string name="hint_contacto">Contact</string>
    <string name="hint_mail">Mail</string>
    <string name="sin_concepto">There is no concept</string>
    <string name="sin_viatico">There is no amount</string>
    <string name="sin_correo">There is no mail</string>
    <string name="no_correo">Invalid mail</string>
    <string name="interno">Interno</string>
    <string name="venue">Venue</string>
    <string name="enviar_mail">Send Mail</string>
    
    <string name="alert_no_dates">There are no more dates for this event.</string>
    <string name="alert_next_date">Go to next date?</string>
    <string name="add_date">Add New Date</string>
    <string name="close_event">Close event</string>
    
    <!-- Detalles PRod -->
    <string name="d_nombre">NAME: </string>
    <string name="d_tipo">TYPE: </string>
    <string name="d_talla">SIZE: </string>
    <string name="d_precio">PRICE: </string>
    <string name="d_cantidad">AMOUNT: </string>
    <string name="d_cantidad_stand">IN STAND: </string>
    <string name="d_artista">ARTIST: </string>
    <string name="d_cortesias">COMPLIMENTARIES</string>
    <string name="d_no_cor">No complimentaries</string>
    <string name="d_adicionales">ADDING </string>
    <string name="d_no_adi">No addings</string>
    <string name="title_activity_preferencias">Preferences</string>
    
    <!-- Preferencias -->
	<string name="p_divisas">CURRENCY</string>
	<string name="p_comisiones">COMMISSIONS</string>
	<string name="p_ingreso">Ingresos</string>
	<string name="p_cort_uno">Cortesía uno</string>
	<string name="p_cort_dos">Cortesía dos</string>
	<string name="p_ing_uno">Ingreso uno</string>
	<string name="p_ing_dos">Ingreso dos</string>
	<string name="p_ing_tres">Ingreso tres</string>
	<string name="p_gasto_uno">Gasto uno</string>
	<string name="p_gasto_dos">Gasto dos</string>
	<string name="p_gasto_tres">Gasto tres</string>
	<string name="p_sueldo_uno">Sueldo uno</string>
	<string name="p_sueldo_dos">Sueldo dos</string>
	<string name="p_sueldo_tres">Sueldo tres</string>
	<string name="p_op_guar">Opción uno guardada</string>
	<string name="p_op_guar_d">Opción dos guardada</string>
	
	<string name="long_change">Change commission</string>
	<string name="producto">Product</string>
	
	<string name="update_exitoso">Product Updated</string>
	<string name="update_noexitoso">Unsuccessful update</string>
	<string name="d_com_agregada">Commission added</string>
	<string name="d_tax_agregada">Tax added</string>
	<string name="d_com_nov">Commission not valid</string>
	<string name="d_tax_nov">Tax not valid</string>
	<string name="d_com_err">Error</string>
	<string name="d_talla_agregada">New size added</string>
	<string name="d_talla_can">Amount not valid</string>
	<string name="d_eliminado">Deleted</string>
	<string name="add_artista">New Artist</string>
	<string name="a_anadido">Artist added</string>
	<string name="p_anadido">Product added</string>
	<string name="p_anadido_ad">Additional amount added</string>
	<string name="p_anadido_cor">Complimentary added</string>
	<string name="p_eliminado">Product deleted</string>
	<string name="s_ananido">Stand added</string>
	<string name="s_eliminado">Stand deleted</string>
	<string name="s_updated">Stand Updated</string>
	<string name="m_art_agregado">Artist added</string>
	<string name="m_date_agregado">Date added</string>
	<string name="btn_abrir">Reopen Stand</string>
	<string name="alert_stand_cerrado">This stand is already closed</string>
	<string name="title_cantidad">Select the amount</string>
	<string name="alert_regresado">Amount Returned</string>
	<string name="title_delete_comp">Chose complimentaries to delete</string>
	<string name="c_eliminado">Complimentaries deleted</string>
	<string name="no_cortesias">This product has no complimentaries</string>
	<string name="v_actualizado">Venue Updated</string>
	<string name="v_noval">Capacity not Valid</string>
	<string name="e_actualizado">Event Name Updated</string>
	<string name="error_reportes">You haven\'t send all the reports</string>
	<string name="a_eliminado">Adding deleted</string>
	
</resources>