<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:title="@string/p_divisas">
        
        <EditTextPreference
            
            android:key="divisa"
            android:title="Valor Dólar"
            android:summary="Valor del dólar para la moneda seleccionada"
            android:defaultValue="0"
            android:numeric="decimal"
            android:inputType="numberDecimal" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/d_cortesias">
        
        <EditTextPreference
            android:key="op1"
            android:title="@string/p_cort_uno"
            android:summary="Nombre para tipo de cortesia extra"
            android:defaultValue="OTHER"/>
        
        <EditTextPreference
            android:key="op2"
            android:title="@string/p_cort_dos"
            android:summary="Nombre para tipo de cortesia extra"
            android:defaultValue="OTHER"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/p_ingreso">
        
        <EditTextPreference
            android:key="tipo1"
            android:title="@string/p_ing_uno"
            android:summary="Nombre para tipo de ingreso extra"
            android:defaultValue="OTHER"/>
        
        <EditTextPreference
            android:key="tipo2"
            android:title="@string/p_ing_dos"
            android:summary="Nombre para tipo de ingreso extra"
            android:defaultValue="OTHER"/>
        
        <EditTextPreference
            android:key="tipo3"
            android:title="@string/p_ing_tres"
            android:summary="Nombre para tipo de ingreso extra"
            android:defaultValue="OTHER"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/viaticos">
        
        <EditTextPreference
            android:key="gasto1"
            android:title="@string/p_gasto_uno"
            android:summary="Nombre para tipo de gasto extra"
            android:defaultValue="OTHER"/>
        
        <EditTextPreference
            android:key="gasto2"
            android:title="@string/p_gasto_dos"
            android:summary="Nombre para tipo de gasto extra"
            android:defaultValue="OTHER"/>
        
        <EditTextPreference
            android:key="gasto3"
            android:title="@string/p_gasto_tres"
            android:summary="Nombre para tipo de gasto extra"
            android:defaultValue="OTHER"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/lbl_sueldos">
        
        <EditTextPreference
            android:key="sueldo1"
            android:title="@string/p_sueldo_uno"
            android:summary="Nombre para tipo de sueldo extra"
            android:defaultValue="OTHER"/>
        
        <EditTextPreference
            android:key="sueldo2"
            android:title="@string/p_sueldo_dos"
            android:summary="Nombre para tipo de sueldo extra"
            android:defaultValue="OTHER"/>
        
        <EditTextPreference
            android:key="sueldo3"
            android:title="@string/p_sueldo_tres"
            android:summary="Nombre para tipo de sueldo extra"
            android:defaultValue="OTHER"/>
        
    </PreferenceCategory>
    

</PreferenceScreen>
