<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/viaticos"
	        android:textColor="@color/azul_textos"
	        android:textStyle="bold"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <LinearLayout 
	        android:id="@+id/layoutComisiones"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <EditText
		        android:id="@+id/editConcepto"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.4"
		        android:hint="@string/hint_concepto"
		        android:inputType="text" />
	        
	        <EditText
		        android:id="@+id/editViatico"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.4"
		        android:hint="@string/hint_cantidad"
		        android:inputType="numberDecimal" />
	            
	        <ImageView
		        android:id="@+id/btnComision"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:contentDescription="@string/cnt"
		        android:src="@drawable/mas" />
	        
	    </LinearLayout>
    
	    <LinearLayout 
	        android:id="@+id/layoutReportes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
	        <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/reportes"
		        android:textColor="@color/azul_textos"
		        android:textStyle="bold"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </LinearLayout>

	</LinearLayout>
</ScrollView>
