<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fondo_botonbar_a"
                android:text="@string/btn_aceptar"
                style="?android:attr/buttonBarStyle"
                android:textColor="@color/blanco" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fondo_botonbar_b"
                android:text="@string/btn_cancelar"
                style="?android:attr/buttonBarStyle"
                android:textColor="@color/blanco" />
        </LinearLayout>

        <ScrollView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="@dimen/activity_vertical_margin"
		   	android:paddingRight="@dimen/activity_horizontal_margin"
		   	android:paddingLeft="@dimen/activity_horizontal_margin"  >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imgProdD"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cnt"
                    android:src="@drawable/teeshirt" />

                <ImageView
                    android:id="@+id/btnCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/im_por"
                    android:onClick="takePicture"
                    android:padding="5dp"
                    android:src="@drawable/mas"
                    android:text="@string/mas" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" >

                        <Spinner
                            android:id="@+id/spinnerTipo"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/editTipo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_tipo"
                            android:visibility="invisible" />
                    </FrameLayout>

                    <Button
                        android:id="@+id/btnOtroTipo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@drawable/fondo_boton"
                        android:text="@string/otro"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/blanco" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editNombreProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/name_product" >  
                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/editPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/preciod"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editCantidadProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cantidad"
                    android:visibility="gone"
                    android:inputType="number" >
              
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tallas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_talla"
                android:textColor="@color/azul_textos"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        <TextView
            android:id="@+id/txtTallas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:textColor="@color/azul"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artista_dialogo_prod"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/azul_textos" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/azul_textos" />

        <Spinner
            android:id="@+id/spinnerArtista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comision"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/azul_textos" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/azul_textos" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinnerComisionesP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:ems="10"
                android:hint="@string/im_por"
                android:inputType="number" >
            </Spinner>

            <EditText
                android:id="@+id/editComisiones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="number" >
      
            </EditText>

            <ImageView
                android:id="@+id/btnComision"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/cnt"
                android:src="@drawable/mas" />

            <ImageView
                android:id="@+id/btnComLess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/cnt"
                android:src="@drawable/menos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/radioComisionP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioPor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:text="@string/por"
                    android:textColor="@color/azul_textos" />

                <RadioButton
                    android:id="@+id/radioDin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/din"
                    android:textColor="@color/azul_textos" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioComisionT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:orientation="horizontal" >
                
                <RadioButton
                    android:id="@+id/radioAT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r_neto"
                    android:checked="true"
                    android:textColor="@color/azul_textos" />

                <RadioButton
                    android:id="@+id/radioBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r_bruto"
                    android:textColor="@color/azul_textos" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listComisiones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/txtView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impuestos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/azul_textos" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/azul_textos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editImpuestoCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/por"
                android:inputType="number" />

            <ImageView
                android:id="@+id/btnTaxes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:contentDescription="@string/cnt"
                android:src="@drawable/mas" />

            <ImageView
                android:id="@+id/btnTaxesLess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:contentDescription="@string/cnt"
                android:src="@drawable/menos"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listImpuestos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>